<?xml version="1.0"?>
<package>
  <name>dynamic_reconfigure_with_groups</name>
  <version>0.0.0</version>
  <description>The dynamic_reconfigure_with_groups package</description>
  <maintainer email="johannes@intermodalics.eu">Johannes Meyer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
